# instasim-kshop-email-processor

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  imap-shell.sh  main.py  pyproject.toml  zeep-test.py
